staff and staffDepartment use ModelIdentifier